--- a/index.html
+++ b/index.html
@@ -1,94 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anuvinda Sathyan</title>
-    <link rel="icon" type ="image/png" href="logo.png">
-</head>
-<body>
+    <link rel="icon" type="image/png" href="logo.png" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div>
-            <div>
-<h1>Anuvinda Sathyan</h1>
-            </div>
-            <nav>
-<ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Skills</a></li>
-    <li><a href="#">Contact</a></li>
-
-</ul>
-            </nav>
+      <div class="container">
+        <div id="caption">
+          <h1><span class="logo-gold">Anuvinda </span> Sathyan</h1>
         </div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <section>
-    <div>
+    <section id="Hero">
+      <div class="container">
         <div>
-            <h4>Hi I'm</h4>
-            <h2>Anuvinda Sathyan</h2>
-            <button>Download CV</button>
+          <h4>Hi I'm</h4>
+          <h1>Anuvinda Sathyan</h1>
+          <button>Download CV</button>
         </div>
-    </div>
+      </div>
     </section>
 
     <section id="about">
-     <div>
+      <div class="container">
         <div>
-           <img src="image.jpg" alt="Profile Pic" height="300px" width="300px">
+          <img src="image.jpg" alt="Profile Pic" height="300px" width="300px" />
         </div>
         <div>
-            <h2>About Me</h2>
-            <p>I'm Anuvinda Sathyan currently pursuing Btech in Electronics and Communication Engineering at Government College of Engineering Kannur. I consider myself as a responsible and orderly person. I'm looking forward for my first work experience. </p>
-            <button>Download CV</button>
+          <h2>About Me</h2>
+          <p>
+            I'm Anuvinda Sathyan currently pursuing Btech in Electronics and
+            Communication Engineering at Government College of Engineering
+            Kannur. I consider myself as a responsible and orderly person. I'm
+            looking forward for my first work experience.
+          </p>
+          <button>Download CV</button>
         </div>
-     </div>
+      </div>
     </section>
 
     <section id="skills">
-         <div>
-            <div>
-                <h2>Skills</h2>
-                <img src="html.png" alt="" height="100px" width="100px">
-                <h3>Web Development</h3>
-                <p>Web development refers to the creating, building, and maintaining of websites. It includes aspects such as web design, web publishing, web programming, and database management. It is the creation of an application that works over the internet i.e. websites.</p>
-                <img src="paint-palette.png" alt="" height="100px" width="100px">
-                <h3>Design</h3>
-                <p>Design is the process of imagining and planning the creation of objects, systems, buildings, vehicles, etc. It is about creating solutions for people.</p>
-                <img src="coding.png" alt="" height="100px" width="100px">
-                <h3>Coding</h3>
-                <p>Coding is the process of creating instructions for computers using programming languages. Coding is used to program the websites, apps, and other technologies we interact with every day</p>
-            </div>
-         </div>
+      <div class="container">
+        <div>
+          <h2>Skills</h2>
+          <img src="html.png" alt="" height="100px" width="100px" />
+          <h3>Web Development</h3>
+          <p>
+            Web development refers to the creating, building, and maintaining of
+            websites. It includes aspects such as web design, web publishing,
+            web programming, and database management. It is the creation of an
+            application that works over the internet i.e. websites.
+          </p>
+          <img src="paint-palette.png" alt="" height="100px" width="100px" />
+          <h3>Design</h3>
+          <p>
+            Design is the process of imagining and planning the creation of
+            objects, systems, buildings, vehicles, etc. It is about creating
+            solutions for people.
+          </p>
+          <img src="coding.png" alt="" height="100px" width="100px" />
+          <h3>Coding</h3>
+          <p>
+            Coding is the process of creating instructions for computers using
+            programming languages. Coding is used to program the websites, apps,
+            and other technologies we interact with every day
+          </p>
+        </div>
+      </div>
     </section>
-<section>
-    <div>
-          <h2>Let's Connect</h2>
-          <form action="">
-            <div>
-            <label for="name">Name:</label> 
-            <input type="text" name="" id="">
-            </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" name="" id="">
-            </div>
-            <div>
-                <label for="message">Message:</label>
-                <textarea name="" id="" cols="42" rows="5"></textarea>
-            </div>
-            <div>
-                <input class="button" type="submit">
-            </div>
-          </form>
-    </div>
-</section>
-<footer>
-    <div>
+    <section id="forms">
+      <div class="container">
+        <h2>Let's Connect</h2>
+        <form action="">
+          <div>
+            <label for="name">Name:</label>
+            <input type="text" name="" id="" />
+          </div>
+          <div>
+            <label for="email">Email:</label>
+            <input type="email" name="" id="" />
+          </div>
+          <div>
+            <label for="message">Message:</label>
+            <textarea name="" id="" cols="42" rows="5"></textarea>
+          </div>
+          <div>
+            <input class="button" type="submit" />
+          </div>
+        </form>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
         <p>AnuvindaSathyan &copy; 2023 | All Rights Reserved</p>
-    </div>
-</footer>
-</body>
+      </div>
+    </footer>
+  </body>
 </html>
