--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
         </div>
       </div>
     </section>
+    <section id="separate"></section>
 
     <section id="about">
       <div class="container">
-        <div>
+        <div class="about-box1">
           <img src="image.jpg" alt="Profile Pic" height="300px" width="300px" />
         </div>
-        <div>
+        <div class="about-box2">
           <h2>About Me</h2>
           <p>
             I'm Anuvinda Sathyan currently pursuing Btech in Electronics and
